ingress/clickhouse-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clickhouse-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx-ace
  rules:
    - http:
        paths:
          - path: /clickhouse(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ch
                port:
                  number: 8123
