ingress/perses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: perses-ingress
  namespace: perses
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx-ace
  rules:
    - http:
        paths:
          - path: /observe
            pathType: Prefix
            backend:
              service:
                name: perses
                port:
                  number: 8080
