ingress/prom-proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prom-label-proxy-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx-ace
  rules:
    - http:
        paths:
          - path: /prom
            pathType: Prefix
            backend:
              service:
                name: prom-label-proxy
                port:
                  number: 8080
